[project]
name = "langgraph-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-litellm>=0.7.0",
    "langchain[anthropic,openai]>=1.3.11",
    "langgraph>=1.2.7",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
